Experimenting with Saucer Swap for a bit of price data w.r.t the holdings resource.

--- a/services/frontend/appSettings.json
+++ b/services/frontend/appSettings.json
@@ -1,4 +1,5 @@
 {
   "OPENAI_API_KEY": "FEED_ME_I_HUNGER_FOR_TOKENS",
-  "WALLETCONNECT_PROJECT_ID": "___SomeMagicKeyGoesHere___"
+  "WALLETCONNECT_PROJECT_ID": "___SomeMagicKeyGoesHere___",
+  "SAUCER_SWAP_API_KEY": "A_SAUCER_API_KEY_GOES_HERE"
 }
