--- a/services/backend/static/token_holdings/pyproject.toml
+++ b/services/backend/static/token_holdings/pyproject.toml
@@ -21,9 +21,11 @@ tabulate = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
+pytest-mock = "^3.11.0"
 black = "^23.0.0"
 flake8 = "^6.0.0"
 mypy = "^1.5.0"
+pytest-cov = "^6.2.1"
 
 [tool.poetry.scripts]
 token-holdings = "src.cli:cli"
