--- a/services/backend/static/token_holdings/pytest.ini
+++ b/services/backend/static/token_holdings/pytest.ini
@@ -1,4 +1,4 @@
-[tool:pytest]
+[pytest]
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
@@ -7,10 +7,9 @@ addopts =
     -v
     --tb=short
     --strict-markers
-    --disable-warnings
-markers =
-    integration: marks tests as integration tests (require API access)
-    slow: marks tests as slow (deselect with '-m "not slow"')
+markers = 
+    integration: marks tests as integration tests (these might make real network requests)
+    slow: marks tests as slow tests
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
