Some more dataplane fixes and improvements. Most of it is QA'ed but the HBAR price might need review. In either case, it is time to move on.

--- a/services/backend/static/token_holdings/Makefile
+++ b/services/backend/static/token_holdings/Makefile
@@ -1,21 +1,16 @@
-.PHONY: help install test production interactive export
+.PHONY: help install test production interactive status portfolio
 
 # Default target
 help:
-	@echo "Token Holdings Tracking System"
-	@echo "==============================="
+	@echo "Usage: make [target]"
 	@echo ""
-	@echo "Available commands:"
-	@echo "  make install     - Setup environment and install dependencies"
-	@echo "  make test        - Run all tests (unit + integration)"
-	@echo "  make production  - Build production database (unlimited accounts, \$$1 USD min)"
-	@echo "  make interactive - Interactive refresh mode (prompts for old data)"
-	@echo "  make export      - Export all token data to CSV files"
-	@echo ""
-	@echo "Examples:"
-	@echo "  make install && make production  # Setup and build production DB"
-	@echo "  make interactive                 # Smart refresh with prompts"
-	@echo "  make export                      # Export current data to CSV"
+	@echo "Targets:"
+	@echo "  install       - Install dependencies and initialize the database"
+	@echo "  test          - Run the full test suite"
+	@echo "  production    - Build the production database (unlimited accounts, min_usd 1)"
+	@echo "  interactive   - Run in interactive mode to refresh stale token data"
+	@echo "  status        - Show the current status of the token holdings database"
+	@echo "  portfolio     - Look up a portfolio by address"
 
 # Install and setup
 install:
@@ -30,17 +25,17 @@ install:
 
 # Run all tests
 test:
-	@echo "🧪 Running all tests..."
-	poetry run pytest --cov=src --cov-report=term-missing
-	@echo "✅ All tests completed!"
+	@echo "🧪 Running test suite..."
+	poetry run pytest
 
 # Production database build
 production:
 	@echo "🏗️  Building production database..."
 	@echo "  📊 Unlimited accounts per token"
-	@echo "  💰 Minimum USD filter: \$$1.00"  
-	@echo "  🪙 All enabled tokens (HBAR, SAUCE, KARATE)"
-	@echo ""
+	@echo "  💰 Minimum USD filter: \$1.00"
+	@echo "  🪙 All enabled tokens (HBAR, SAUCE, KARATE)\n"
+	@echo "📦 Backing up existing database..."
+	@mv token_holdings.db token_holdings.db.$$(date +%Y%m%d%H%M%S).bak || true
 	poetry run python -m src.cli refresh --min-usd 1 --export-csv
 	@echo ""
 	@echo "📊 Production database status:"
@@ -50,19 +45,15 @@ production:
 # Interactive mode
 interactive:
 	@echo "🤔 Starting interactive refresh mode..."
-	@echo "  📅 Checks data age and prompts for updates"
-	@echo "  🔄 Smart refresh for tokens older than 24 hours"
 	@echo "  📋 Batch processing with confirmation"
 	@echo ""
 	poetry run python -m src.cli refresh --interactive --export-csv
-	@echo "✅ Interactive refresh completed!"
+	@echo "✅ Interactive refresh completed!" 
 
-# Export data
-export:
-	@echo "📄 Exporting all token data to CSV..."
-	poetry run python -m src.cli export
-	@echo "📊 Exporting summary of all tokens..."
-	poetry run python -m src.cli export --summary
-	@echo "📁 Checking exported files..."
-	@ls -la temp_data/ 2>/dev/null || echo "No temp directory found"
-	@echo "✅ Export completed!" 
+status:
+	@echo "📊 Checking system status..."
+	poetry run python -m src.cli status 
+
+portfolio:
+	@echo "🔎 Looking up portfolio..."
+	poetry run python -m analytics.portfolio 
