--- a/services/backend/static/token_holdings/pyproject.toml
+++ b/services/backend/static/token_holdings/pyproject.toml
@@ -7,25 +7,25 @@ readme = "README.MD"
 packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 requests = "^2.31.0"
-pandas = "^2.2.0"
-numpy = "^1.24.0"
-click = "^8.1.0"
-tqdm = "^4.65.0"
-python-dotenv = "^1.0.0"
-cryptography = "^41.0.0"
-sqlalchemy = "^2.0.0"
-alembic = "^1.12.0"
+click = "^8.1.7"
+sqlalchemy = "^2.0.29"
 tabulate = "^0.9.0"
+pandas = "^2.2.2"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.0"
-pytest-mock = "^3.11.0"
-black = "^23.0.0"
-flake8 = "^6.0.0"
-mypy = "^1.5.0"
-pytest-cov = "^6.2.1"
+pytest = "^7.4.4"
+pytest-mock = "^3.10"
+flake8 = "^5.0"
+black = "^23.0"
+mypy = "^1.0"
+pytest-cov = "^4.0.0"
+jupyter = "^1.0.0"
+plotly = "^5.13.0"
+ipython-sql = "^0.5.0"
+notebook = "^7.0.0"
+jupytext = "^1.16.1"
 
 [tool.poetry.scripts]
 token-holdings = "src.cli:cli"
