--- a/services/backend/pyproject.toml
+++ b/services/backend/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = "^2.0"
 httpx = "^0.27"
 pydantic = "^2.7"
 numpy = "^1.26"
+pandas = "^2.2.0"
 anyio = "^4.9.0"
 
 [tool.poetry.group.dev.dependencies]
