--- a/services/frontend/appSettings.json
+++ b/services/frontend/appSettings.json
@@ -1,5 +1,5 @@
 {
-  "OPENAI_API_KEY": "FEED_ME_I_HUNGER_FOR_TOKENS",
-  "WALLETCONNECT_PROJECT_ID": "___SomeMagicKeyGoesHere___",
-  "SAUCER_SWAP_API_KEY": "A_SAUCER_API_KEY_GOES_HERE"
+  "APP_NAME": "Quick Origins",
+  "VERSION": "1.0.0", 
+  "DESCRIPTION": "AI-Powered Portfolio Intelligence for Hedera Network"
 }
