--- a/services/backend/pyproject.toml
+++ b/services/backend/pyproject.toml
@@ -15,6 +15,7 @@ pydantic = "^2.7"
 numpy = "^1.26"
 pandas = "^2.2.0"
 anyio = "^4.9.0"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2"
