--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -6,6 +6,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "dev-secure": "npm run build && npm run preview",
+    "dev-watch": "npm run build && vite preview --port 3000 --host 0.0.0.0",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
