--- a/.dockerignore
+++ b/.dockerignore
@@ -44,4 +44,7 @@ services/frontend/appSettings.json
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db 
+Thumbs.db
+
+# Poetry lock files
+poetry.lock 
