--- a/services/agent_support/pyproject.toml
+++ b/services/agent_support/pyproject.toml
@@ -14,6 +14,8 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.10"
 fastmcp = "^2.4.0"
+fastapi = "^0.110.0"
+httpx = "^0.28.1"
 llama-index-core = "^0.10.20"
 llama-index-embeddings-huggingface = "^0.2.0"
 sentence-transformers = "^2.2.0"
