--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -24,7 +24,11 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "@langchain/mcp-adapters": "^0.6.0",
+    "remark-math": "^5.1.1",
+    "rehype-katex": "^6.0.2",
+    "katex": "^0.16.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
