--- a/services/agent_support/pyproject.toml
+++ b/services/agent_support/pyproject.toml
@@ -13,6 +13,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
+numpy = "<1.25"
 fastmcp = "^2.4.0"
 fastapi = "^0.110.0"
 httpx = "^0.28.1"
