--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -28,7 +28,10 @@
     "@langchain/mcp-adapters": "^0.6.0",
     "remark-math": "^5.1.1",
     "rehype-katex": "^6.0.2",
-    "katex": "^0.16.9"
+    "katex": "^0.16.9",
+    "stream-browserify": "^3.0.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
