--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -14,6 +14,6 @@ services:
     #   - "${FRONTEND_PORT:-8080}:8080"
 
     # For local development you often mount source for live reload
-    volumes:
-      - ./services:/app/services
-      - ./services/backend/logs:/app/services/backend/logs
+    # volumes:
+    #   - ./services:/app/services
+    #   - ./services/backend/logs:/app/services/backend/logs
